stylesheets/dismas.css
.navbar-custom{
  background-color: #5a0c12;
  margin-bottom: 0;
}

.text-center .img-responsive {
  display: inline-block;
}

.navbar-brand {
  display: inline-block;
  max-width: 100%;
  height: auto;
}

img.side-image{
  width: 200px;
  margin: 10% 0;
}

.logo {
  width: 175px;
}

.dropdown-menu{
  background-color: #5a0c12;
}

.bring-up{
  margin-top: -4%;
  margin-bottom: 2%;
  font-family: "Lato";
  font-style: italic;
}

.bring-down{
  margin-top: 2%;
}

.main-column-img{
  margin-top: 2%;
  margin-bottom: 2%;
  max-width: 600px;
  width: 100%;
}

.cursive{
  font-family: "Lato";
  font-style: italic;
  font-weight: 900;
}
figcaption{
  margin-top: -2%;
  margin-bottom: 5%;
}
.larger{
  font-size: 1.2em;
}

nav a{
  color: white !important;
  font-family: 'Fredericka the Great', cursive;
  font-size: 1.3em;
  background-color: #5a0c12;

}

aside{
  margin-top: 5%;
  margin-bottom: 10%;
}

aside p {
  font-family: "Lato";
  font-style: italic;
  font-weight: 900;
}

.main-text{
  font-family: "Book Antiqua";
  font-size: 1.25em;
}

.hero {
  position: relative;
  margin-top: -0.5%;
  margin-bottom: 2%;
  color: #5a0c12;
  font-weight: 900;
  font-family: 'Fredericka the Great';
  font-size: 1.5em;
  padding: 2% 15px 15%;
}

.ftg{
  font-family: 'Fredericka the Great';
  color: #5a0c12;
}

.hero h1{
  font-size: 2.5em;
  font-weight: 900;
}

.hero:after{
  content: "";
  display: block;
  background: url('../images/razor_fence2.jpg') no-repeat center center scroll;
  background-size: cover;
  opacity: 0.5;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
}

footer{
  background: #5a0c12;
  color: white;
  font-size: 1.0em;
  padding: 1%;
}

span.tag{
  font-size: 0.7em;
  font-family: cursive;
}

.navbar-toggle {
  display: block;
  position: fixed;
  top: 5px;
  right: 5px;
  z-index: 10000;
}
.navbar-collapse.collapse {
  display: none !important;
}
.navbar-header {
  position: relative;
}

.navbar-header, .navbar-brand, .navbar-toggle.collapsed {
  float: none;
}
.navbar-collapse.collapse.in {
  display: block !important;
}

.navbar-default .navbar-nav {
  background-color: #5a0c12 !important;

}
.navbar-fixed-top + .container-fluid{
  padding-top: 100px;
}


@media (min-width: 995px) {

  .navbar-collapse > ul{
    display: table;
    float: none;
    margin: 0 auto;
  }
  .navbar-collapse > ul > li {
    display: table-cell;
    float: none;
  }
  .navbar-toggle {
    display: none;
  }
  .navbar-collapse.collapse {
    display: block !important;
  }
}

@media (max-width: 560px) {
  .navbar-brand {
    margin-top: 50px;
  }
}

@media (max-width: 600px){
  .navbar-fixed-top {
    min-height: 0;
    height: 0;

  }
  .navbar-fixed-top .navbar-brand {
    padding: 0;
    margin: 0;
    height: 0;
    overflow: hidden;
  }
  .navbar-fixed-top .navbar-header {
    padding: 0;
    margin: 0;
    height: 0;
  }
}

